[gd_scene load_steps=17 format=2]

[ext_resource path="res://scenes/wall.gd" type="Script" id=1]
[ext_resource path="res://scenes/wall/wall.tscn" type="PackedScene" id=2]
[ext_resource path="res://tiles/sand_tiles.tres" type="TileSet" id=3]
[ext_resource path="res://fonts/EtBt11aBold-xxZ0.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://scenes/ball/Dust Particle.png" type="Texture" id=5]
[ext_resource path="res://tiles/test2.tres" type="TileSet" id=6]
[ext_resource path="res://tiles/bomb3.tres" type="TileSet" id=7]
[ext_resource path="res://addons/tile_spawner/tile_spawner.gd" type="Script" id=8]
[ext_resource path="res://sprites/cannon/cannon_body.png" type="Texture" id=10]
[ext_resource path="res://sprites/cannon/cannon_standt.png" type="Texture" id=11]
[ext_resource path="res://scenes/aiming/aimer.tscn" type="PackedScene" id=12]
[ext_resource path="res://scenes/bricks/squares/gold/gold1.tscn" type="PackedScene" id=13]
[ext_resource path="res://scenes/bricks/squares/wood/wood1.tscn" type="PackedScene" id=14]
[ext_resource path="res://scenes/bricks/squares/rocks/rock1.tscn" type="PackedScene" id=15]
[ext_resource path="res://scenes/bricks/bombs/golden_bomb.tscn" type="PackedScene" id=16]

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 4 )

[node name="stage20" type="Node2D"]
script = ExtResource( 1 )
balls = 80
delay = 0.1
vel_max = 500
ball_life = 10
max_bounces = 10

[node name="StaticBody2D" parent="." instance=ExtResource( 2 )]

[node name="shoot_delay" type="Timer" parent="."]
wait_time = 0.1

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 5 )

[node name="ball" type="Node2D" parent="."]

[node name="Label" type="Label" parent="."]
margin_left = 24.0
margin_top = 720.0
margin_right = 104.0
margin_bottom = 789.0
custom_fonts/font = SubResource( 1 )
text = "0
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="aimer" parent="." instance=ExtResource( 12 )]
position = Vector2( -64, 464 )

[node name="bricks" type="Node2D" parent="."]

[node name="H_rec" type="Node2D" parent="bricks"]
position = Vector2( 0, 8 )

[node name="V_rec" type="Node2D" parent="bricks"]
position = Vector2( 0, 8 )

[node name="triangles" type="Node2D" parent="bricks"]

[node name="squares" type="Node2D" parent="bricks"]

[node name="gold1" parent="bricks/squares" instance=ExtResource( 13 )]
position = Vector2( 272, 144 )

[node name="gold2" parent="bricks/squares" instance=ExtResource( 13 )]
position = Vector2( 304, 144 )

[node name="gold3" parent="bricks/squares" instance=ExtResource( 13 )]
position = Vector2( 336, 144 )

[node name="gold4" parent="bricks/squares" instance=ExtResource( 13 )]
position = Vector2( 368, 144 )

[node name="gold5" parent="bricks/squares" instance=ExtResource( 13 )]
position = Vector2( 400, 144 )

[node name="gold6" parent="bricks/squares" instance=ExtResource( 13 )]
position = Vector2( 432, 144 )

[node name="gold7" parent="bricks/squares" instance=ExtResource( 13 )]
position = Vector2( 464, 144 )

[node name="gold8" parent="bricks/squares" instance=ExtResource( 13 )]
position = Vector2( 496, 144 )

[node name="gold9" parent="bricks/squares" instance=ExtResource( 13 )]
position = Vector2( 528, 144 )

[node name="gold10" parent="bricks/squares" instance=ExtResource( 13 )]
position = Vector2( 560, 144 )

[node name="gold11" parent="bricks/squares" instance=ExtResource( 13 )]
position = Vector2( 592, 144 )

[node name="gold12" parent="bricks/squares" instance=ExtResource( 13 )]
position = Vector2( 624, 144 )

[node name="gold13" parent="bricks/squares" instance=ExtResource( 13 )]
position = Vector2( 656, 144 )

[node name="gold14" parent="bricks/squares" instance=ExtResource( 13 )]
position = Vector2( 688, 144 )

[node name="gold15" parent="bricks/squares" instance=ExtResource( 13 )]
position = Vector2( 720, 144 )

[node name="gold16" parent="bricks/squares" instance=ExtResource( 13 )]
position = Vector2( 752, 144 )

[node name="gold17" parent="bricks/squares" instance=ExtResource( 13 )]
position = Vector2( 240, 176 )

[node name="rock1" parent="bricks/squares" instance=ExtResource( 15 )]
position = Vector2( 368, 176 )
brick_life = 25

[node name="rock2" parent="bricks/squares" instance=ExtResource( 15 )]
position = Vector2( 656, 176 )
brick_life = 25

[node name="gold18" parent="bricks/squares" instance=ExtResource( 13 )]
position = Vector2( 784, 176 )

[node name="gold19" parent="bricks/squares" instance=ExtResource( 13 )]
position = Vector2( 240, 208 )

[node name="rock3" parent="bricks/squares" instance=ExtResource( 15 )]
position = Vector2( 368, 208 )
brick_life = 25

[node name="rock4" parent="bricks/squares" instance=ExtResource( 15 )]
position = Vector2( 656, 208 )
brick_life = 25

[node name="gold20" parent="bricks/squares" instance=ExtResource( 13 )]
position = Vector2( 784, 208 )

[node name="gold21" parent="bricks/squares" instance=ExtResource( 13 )]
position = Vector2( 240, 240 )

[node name="rock5" parent="bricks/squares" instance=ExtResource( 15 )]
position = Vector2( 336, 240 )
brick_life = 25

[node name="rock6" parent="bricks/squares" instance=ExtResource( 15 )]
position = Vector2( 688, 240 )
brick_life = 25

[node name="gold22" parent="bricks/squares" instance=ExtResource( 13 )]
position = Vector2( 784, 240 )

[node name="gold23" parent="bricks/squares" instance=ExtResource( 13 )]
position = Vector2( 240, 272 )

[node name="rock7" parent="bricks/squares" instance=ExtResource( 15 )]
position = Vector2( 336, 272 )
brick_life = 25

[node name="rock8" parent="bricks/squares" instance=ExtResource( 15 )]
position = Vector2( 688, 272 )
brick_life = 25

[node name="gold24" parent="bricks/squares" instance=ExtResource( 13 )]
position = Vector2( 784, 272 )

[node name="gold25" parent="bricks/squares" instance=ExtResource( 13 )]
position = Vector2( 240, 304 )

[node name="rock9" parent="bricks/squares" instance=ExtResource( 15 )]
position = Vector2( 336, 304 )
brick_life = 50

[node name="rock10" parent="bricks/squares" instance=ExtResource( 15 )]
position = Vector2( 688, 304 )
brick_life = 50

[node name="gold26" parent="bricks/squares" instance=ExtResource( 13 )]
position = Vector2( 784, 304 )

[node name="gold27" parent="bricks/squares" instance=ExtResource( 13 )]
position = Vector2( 240, 336 )

[node name="rock11" parent="bricks/squares" instance=ExtResource( 15 )]
position = Vector2( 336, 336 )
brick_life = 50

[node name="rock12" parent="bricks/squares" instance=ExtResource( 15 )]
position = Vector2( 688, 336 )
brick_life = 50

[node name="gold28" parent="bricks/squares" instance=ExtResource( 13 )]
position = Vector2( 784, 336 )

[node name="gold29" parent="bricks/squares" instance=ExtResource( 13 )]
position = Vector2( 240, 368 )

[node name="rock13" parent="bricks/squares" instance=ExtResource( 15 )]
position = Vector2( 336, 368 )
brick_life = 50

[node name="rock14" parent="bricks/squares" instance=ExtResource( 15 )]
position = Vector2( 688, 368 )
brick_life = 50

[node name="gold30" parent="bricks/squares" instance=ExtResource( 13 )]
position = Vector2( 784, 368 )

[node name="gold31" parent="bricks/squares" instance=ExtResource( 13 )]
position = Vector2( 272, 400 )

[node name="gold32" parent="bricks/squares" instance=ExtResource( 13 )]
position = Vector2( 304, 400 )

[node name="gold33" parent="bricks/squares" instance=ExtResource( 13 )]
position = Vector2( 336, 400 )

[node name="gold34" parent="bricks/squares" instance=ExtResource( 13 )]
position = Vector2( 368, 400 )

[node name="rock15" parent="bricks/squares" instance=ExtResource( 15 )]
position = Vector2( 400, 400 )
brick_life = 25

[node name="rock16" parent="bricks/squares" instance=ExtResource( 15 )]
position = Vector2( 432, 400 )
brick_life = 25

[node name="rock17" parent="bricks/squares" instance=ExtResource( 15 )]
position = Vector2( 464, 400 )
brick_life = 25

[node name="rock18" parent="bricks/squares" instance=ExtResource( 15 )]
position = Vector2( 496, 400 )
brick_life = 25

[node name="rock19" parent="bricks/squares" instance=ExtResource( 15 )]
position = Vector2( 528, 400 )
brick_life = 25

[node name="rock20" parent="bricks/squares" instance=ExtResource( 15 )]
position = Vector2( 560, 400 )
brick_life = 25

[node name="rock21" parent="bricks/squares" instance=ExtResource( 15 )]
position = Vector2( 592, 400 )
brick_life = 25

[node name="rock22" parent="bricks/squares" instance=ExtResource( 15 )]
position = Vector2( 624, 400 )

[node name="gold35" parent="bricks/squares" instance=ExtResource( 13 )]
position = Vector2( 656, 400 )

[node name="gold36" parent="bricks/squares" instance=ExtResource( 13 )]
position = Vector2( 688, 400 )

[node name="gold37" parent="bricks/squares" instance=ExtResource( 13 )]
position = Vector2( 720, 400 )

[node name="gold38" parent="bricks/squares" instance=ExtResource( 13 )]
position = Vector2( 752, 400 )

[node name="gold39" parent="bricks/squares" instance=ExtResource( 13 )]
position = Vector2( 240, 432 )

[node name="wood1" parent="bricks/squares" instance=ExtResource( 14 )]
position = Vector2( 368, 432 )

[node name="wood2" parent="bricks/squares" instance=ExtResource( 14 )]
position = Vector2( 656, 432 )

[node name="gold40" parent="bricks/squares" instance=ExtResource( 13 )]
position = Vector2( 784, 432 )

[node name="gold41" parent="bricks/squares" instance=ExtResource( 13 )]
position = Vector2( 240, 464 )

[node name="wood3" parent="bricks/squares" instance=ExtResource( 14 )]
position = Vector2( 368, 464 )

[node name="wood4" parent="bricks/squares" instance=ExtResource( 14 )]
position = Vector2( 656, 464 )

[node name="gold42" parent="bricks/squares" instance=ExtResource( 13 )]
position = Vector2( 784, 464 )

[node name="gold43" parent="bricks/squares" instance=ExtResource( 13 )]
position = Vector2( 240, 496 )

[node name="wood5" parent="bricks/squares" instance=ExtResource( 14 )]
position = Vector2( 368, 496 )

[node name="wood6" parent="bricks/squares" instance=ExtResource( 14 )]
position = Vector2( 656, 496 )

[node name="gold44" parent="bricks/squares" instance=ExtResource( 13 )]
position = Vector2( 784, 496 )

[node name="gold45" parent="bricks/squares" instance=ExtResource( 13 )]
position = Vector2( 240, 528 )

[node name="wood7" parent="bricks/squares" instance=ExtResource( 14 )]
position = Vector2( 368, 528 )

[node name="wood8" parent="bricks/squares" instance=ExtResource( 14 )]
position = Vector2( 656, 528 )

[node name="gold46" parent="bricks/squares" instance=ExtResource( 13 )]
position = Vector2( 784, 528 )

[node name="gold47" parent="bricks/squares" instance=ExtResource( 13 )]
position = Vector2( 240, 560 )

[node name="wood9" parent="bricks/squares" instance=ExtResource( 14 )]
position = Vector2( 368, 560 )

[node name="wood10" parent="bricks/squares" instance=ExtResource( 14 )]
position = Vector2( 656, 560 )

[node name="gold48" parent="bricks/squares" instance=ExtResource( 13 )]
position = Vector2( 784, 560 )

[node name="gold49" parent="bricks/squares" instance=ExtResource( 13 )]
position = Vector2( 272, 592 )

[node name="gold50" parent="bricks/squares" instance=ExtResource( 13 )]
position = Vector2( 304, 592 )

[node name="gold51" parent="bricks/squares" instance=ExtResource( 13 )]
position = Vector2( 336, 592 )

[node name="gold52" parent="bricks/squares" instance=ExtResource( 13 )]
position = Vector2( 368, 592 )

[node name="wood11" parent="bricks/squares" instance=ExtResource( 14 )]
position = Vector2( 400, 592 )

[node name="wood12" parent="bricks/squares" instance=ExtResource( 14 )]
position = Vector2( 432, 592 )

[node name="wood13" parent="bricks/squares" instance=ExtResource( 14 )]
position = Vector2( 464, 592 )

[node name="wood14" parent="bricks/squares" instance=ExtResource( 14 )]
position = Vector2( 496, 592 )

[node name="wood15" parent="bricks/squares" instance=ExtResource( 14 )]
position = Vector2( 528, 592 )

[node name="wood16" parent="bricks/squares" instance=ExtResource( 14 )]
position = Vector2( 560, 592 )

[node name="wood17" parent="bricks/squares" instance=ExtResource( 14 )]
position = Vector2( 592, 592 )

[node name="wood18" parent="bricks/squares" instance=ExtResource( 14 )]
position = Vector2( 624, 592 )

[node name="gold53" parent="bricks/squares" instance=ExtResource( 13 )]
position = Vector2( 656, 592 )

[node name="gold54" parent="bricks/squares" instance=ExtResource( 13 )]
position = Vector2( 688, 592 )

[node name="gold55" parent="bricks/squares" instance=ExtResource( 13 )]
position = Vector2( 720, 592 )

[node name="gold56" parent="bricks/squares" instance=ExtResource( 13 )]
position = Vector2( 752, 592 )

[node name="gold57" parent="bricks/squares" instance=ExtResource( 13 )]
position = Vector2( 240, 624 )

[node name="gold58" parent="bricks/squares" instance=ExtResource( 13 )]
position = Vector2( 784, 624 )

[node name="gold59" parent="bricks/squares" instance=ExtResource( 13 )]
position = Vector2( 240, 656 )

[node name="gold60" parent="bricks/squares" instance=ExtResource( 13 )]
position = Vector2( 784, 656 )

[node name="gold61" parent="bricks/squares" instance=ExtResource( 13 )]
position = Vector2( 240, 688 )

[node name="gold62" parent="bricks/squares" instance=ExtResource( 13 )]
position = Vector2( 784, 688 )

[node name="gold63" parent="bricks/squares" instance=ExtResource( 13 )]
position = Vector2( 240, 720 )

[node name="gold64" parent="bricks/squares" instance=ExtResource( 13 )]
position = Vector2( 784, 720 )

[node name="bomb" type="Node2D" parent="bricks"]

[node name="sand" type="Node2D" parent="bricks"]

[node name="Sprite2" type="Sprite" parent="."]
position = Vector2( 494, 713 )
rotation = 1.5708
scale = Vector2( 3, 3 )
texture = ExtResource( 10 )
offset = Vector2( -2.5, -0.5 )

[node name="Sprite3" type="Sprite" parent="."]
position = Vector2( 480, 704 )
scale = Vector2( 4, 4 )
texture = ExtResource( 11 )

[node name="aim" type="Node2D" parent="."]

[node name="tilemaps" type="Node2D" parent="."]

[node name="square" type="TileMap" parent="tilemaps"]
mode = 2
tile_set = ExtResource( 6 )
cell_size = Vector2( 32, 32 )
cell_quadrant_size = 32
cell_custom_transform = Transform2D( 32, 0, 0, 32, 0, 0 )
compatibility_mode = true
format = 1
tile_data = PoolIntArray( 262152, 4, 0, 262153, 4, 0, 262154, 4, 0, 262155, 4, 0, 262156, 4, 0, 262157, 4, 0, 262158, 4, 0, 262159, 4, 0, 262160, 4, 0, 262161, 4, 0, 262162, 4, 0, 262163, 4, 0, 262164, 4, 0, 262165, 4, 0, 262166, 4, 0, 262167, 4, 0, 327687, 4, 0, 327691, 8, 0, 327700, 8, 0, 327704, 4, 0, 393223, 4, 0, 393227, 8, 0, 393236, 8, 0, 393240, 4, 0, 458759, 4, 0, 458762, 8, 0, 458773, 8, 0, 458776, 4, 0, 524295, 4, 0, 524298, 8, 0, 524309, 8, 0, 524312, 4, 0, 589831, 4, 0, 589834, 8, 0, 589845, 8, 0, 589848, 4, 0, 655367, 4, 0, 655370, 8, 0, 655381, 8, 0, 655384, 4, 0, 720903, 4, 0, 720906, 8, 0, 720917, 8, 0, 720920, 4, 0, 786440, 4, 0, 786441, 4, 0, 786442, 4, 0, 786443, 4, 0, 786444, 8, 0, 786445, 8, 0, 786446, 8, 0, 786447, 8, 0, 786448, 8, 0, 786449, 8, 0, 786450, 8, 0, 786451, 8, 0, 786452, 4, 0, 786453, 4, 0, 786454, 4, 0, 786455, 4, 0, 851975, 4, 0, 851979, 0, 0, 851988, 0, 0, 851992, 4, 0, 917511, 4, 0, 917515, 0, 0, 917524, 0, 0, 917528, 4, 0, 983047, 4, 0, 983051, 0, 0, 983060, 0, 0, 983064, 4, 0, 1048583, 4, 0, 1048587, 0, 0, 1048596, 0, 0, 1048600, 4, 0, 1114119, 4, 0, 1114123, 0, 0, 1114132, 0, 0, 1114136, 4, 0, 1179656, 4, 0, 1179657, 4, 0, 1179658, 4, 0, 1179659, 4, 0, 1179660, 0, 0, 1179661, 0, 0, 1179662, 0, 0, 1179663, 0, 0, 1179664, 0, 0, 1179665, 0, 0, 1179666, 0, 0, 1179667, 0, 0, 1179668, 4, 0, 1179669, 4, 0, 1179670, 4, 0, 1179671, 4, 0, 1245191, 4, 0, 1245208, 4, 0, 1310727, 4, 0, 1310744, 4, 0, 1376263, 4, 0, 1376280, 4, 0, 1441799, 4, 0, 1441816, 4, 0 )

[node name="H_rect" type="TileMap" parent="tilemaps"]
mode = 2
tile_set = ExtResource( 6 )
cell_size = Vector2( 96, 32 )
cell_quadrant_size = 32
cell_custom_transform = Transform2D( 96, 0, 0, 32, 0, 0 )
compatibility_mode = true
format = 1

[node name="V_rect" type="TileMap" parent="tilemaps"]
mode = 2
tile_set = ExtResource( 6 )
cell_size = Vector2( 32, 96 )
cell_quadrant_size = 32
cell_custom_transform = Transform2D( 32, 0, 0, 96, 0, 0 )
compatibility_mode = true
format = 1

[node name="triangles" type="TileMap" parent="tilemaps"]
mode = 2
tile_set = ExtResource( 6 )
cell_size = Vector2( 48, 48 )
cell_quadrant_size = 32
cell_custom_transform = Transform2D( 48, 0, 0, 48, 0, 0 )
compatibility_mode = true
format = 1

[node name="bomb" type="TileMap" parent="tilemaps"]
tile_set = ExtResource( 7 )
cell_size = Vector2( 32, 32 )
cell_quadrant_size = 32
cell_custom_transform = Transform2D( 32, 0, 0, 32, 0, 0 )
centered_textures = true
format = 1

[node name="sand" type="TileMap" parent="tilemaps"]
tile_set = ExtResource( 3 )
cell_size = Vector2( 16, 16 )
cell_custom_transform = Transform2D( 16, 0, 0, 16, 0, 0 )
format = 1

[node name="tile_spawner" type="Node2D" parent="."]

[node name="squares" type="Node2D" parent="tile_spawner"]
script = ExtResource( 8 )
source_tilemap = NodePath("../../tilemaps/square")
mapping = "res://json addons/objects2.json"
target_node = NodePath("../../bricks/squares")

[node name="triangles" type="Node2D" parent="tile_spawner"]
script = ExtResource( 8 )
source_tilemap = NodePath("../../tilemaps/triangles")
mapping = "res://json addons/objects2.json"
target_node = NodePath("../../bricks/triangles")

[node name="H_rec" type="Node2D" parent="tile_spawner"]
script = ExtResource( 8 )
source_tilemap = NodePath("../../tilemaps/H_rect")
mapping = "res://json addons/objects2.json"
target_node = NodePath("../../bricks/H_rec")

[node name="V_rec" type="Node2D" parent="tile_spawner"]
script = ExtResource( 8 )
source_tilemap = NodePath("../../tilemaps/V_rect")
mapping = "res://json addons/objects2.json"
target_node = NodePath("../../bricks/V_rec")

[node name="bomb" type="Node2D" parent="tile_spawner"]
script = ExtResource( 8 )
source_tilemap = NodePath("../../tilemaps/bomb")
mapping = "res://json addons/bomb_tile.json"
target_node = NodePath("../../bricks/bomb")

[node name="sand" type="Node2D" parent="tile_spawner"]
script = ExtResource( 8 )
source_tilemap = NodePath("../../tilemaps/sand")
mapping = "res://json addons/sand_tile_spawnner.json"
spawn_at_runtime = true
target_node = NodePath("../../bricks/sand")

[node name="golden_bomb" parent="." instance=ExtResource( 16 )]
position = Vector2( 733, 362 )

[node name="golden_bomb2" parent="." instance=ExtResource( 16 )]
position = Vector2( 286, 362 )

[connection signal="nuclear" from="golden_bomb" to="." method="_on_golden_bomb_nuclear"]
[connection signal="nuclear" from="golden_bomb2" to="." method="_on_golden_bomb2_nuclear"]

[editable path="StaticBody2D"]
